--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@ body {
   font-family: "Overpass", sans-serif;
   font-size: 16px;
   min-height: 100vh;
-  padding: 2rem;
+  color: #25252d;
+  background-color: white;
 }
 
 body .attribution {
@@ -18,10 +19,238 @@ body main {
   max-width: 1440px;
   margin-right: auto;
   margin-left: auto;
+  overflow-x: hidden;
+}
+
+body main h1 {
+  font-size: 4em;
+}
+
+body main h3 {
+  font-size: 2rem;
+}
+
+body main h3,
+body main h4 {
+  color: #1f3f5b;
 }
 
 body main h1,
-body main .header-caption {
+body main h3,
+body main h4 {
+  font-weight: 600;
+}
+
+body main section {
+  padding: 2rem;
+}
+
+body main section p {
+  margin: 2rem;
+}
+
+body main section .info-container {
+  padding: 3rem;
+}
+
+body main section .info-container h4 {
+  margin-bottom: 1.8rem;
+}
+
+body main section h3 {
   text-align: center;
+  margin: 2rem;
+  margin: 6rem 2rem 0 2rem;
+}
+
+body main section.landing-section {
+  color: white;
+  background: #ff3d54;
+  /* For browsers that do not support gradients */
+  background-image: url(/images/bg-pattern-intro.svg), -webkit-gradient(linear, left top, right top, from(#ff8f70), to(#ff3d54));
+  background-image: url(/images/bg-pattern-intro.svg), linear-gradient(to right, #ff8f70, #ff3d54);
+  background-repeat: no-repeat, no-repeat;
+  background-position: 26% 52%, center;
+  background-size: 225%, cover;
+  border-bottom-left-radius: 6em 6em;
+  padding: 2em;
+}
+
+body main section.landing-section button {
+  border-radius: 2rem;
+  font-size: 1em;
+  border: 2px solid white;
+  padding: 12px 8px;
+  font-family: "Overpass", sans-serif;
+  font-weight: 600;
+  min-width: 8rem;
+}
+
+body main section.landing-section .white-button {
+  background-color: white;
+  color: #ff3d54;
+}
+
+body main section.landing-section .white-button:hover,
+body main section.landing-section .default-button {
+  background: transparent;
+  color: white;
+}
+
+body main section.landing-section .default-button.login {
+  border: none;
+}
+
+body main section.landing-section .default-button.login:hover,
+body main section.landing-section .default-button.login :active {
+  border: none;
+  text-decoration: underline;
+}
+
+body main section.landing-section .nav-bar-container {
+  margin: 1rem 2.5rem;
+}
+
+body main section.landing-section .nav-bar-container .nav-bar .dropdown-toggle {
+  background-color: transparent;
+  border: none;
+  padding: 0.8rem;
+}
+
+body main section.landing-section .nav-bar-container .nav-bar .dropdown-toggle:hover {
+  text-decoration: underline;
+}
+
+body main section.landing-section .nav-bar-container .nav-bar strong {
+  font-weight: 600;
+  font-size: 2rem;
+  padding: 0 1rem;
+}
+
+body main section.landing-section .nav-bar-container .login-container {
+  float: right;
+}
+
+body main section.landing-section .intro-container {
+  text-align: center;
+  margin: 6rem 2rem;
+}
+
+body main section.landing-section .intro-container h1,
+body main section.landing-section .intro-container .header-caption,
+body main section.landing-section .intro-container .info-btn-container {
+  text-align: center;
+}
+
+body main section.landing-section .intro-container h1 {
+  margin-bottom: 1rem;
+}
+
+body main section.landing-section .intro-container .info-btn-container {
+  margin: 2rem;
+}
+
+body main section.landing-section .intro-container .info-btn-container button {
+  margin: 0.5rem;
+}
+
+body main section.design-future .editor-desk-img {
+  position: relative;
+  bottom: 6rem;
+  left: 3rem;
+}
+
+body main section.design-future .info-container {
+  padding: 7.5rem 1rem 5rem 7rem;
+}
+
+body main section.state-of-art {
+  height: 25rem;
+  padding: 0 1rem 3rem 1rem;
+  color: white;
+  background: #2c2d3f;
+  /* For browsers that do not support gradients */
+  background-image: url(/images/bg-pattern-circles.svg), -webkit-gradient(linear, left top, right top, from(#2c2d3f), to(#3f4164));
+  background-image: url(/images/bg-pattern-circles.svg), linear-gradient(to right, #2c2d3f, #3f4164);
+  background-position: -50% 85%, 0 0;
+  border-bottom-left-radius: 6em 6em;
+  border-top-right-radius: 6em 6em;
+  background-repeat: no-repeat, no-repeat;
+}
+
+body main section.state-of-art h3 {
+  color: white;
+  margin: 1rem 0;
+  text-align: left;
+}
+
+body main section.state-of-art .info-container {
+  float: right;
+  padding: 6rem 6rem 3rem 8rem;
+}
+
+body main section.state-of-art .mobile-phones img {
+  position: relative;
+  bottom: 17%;
+  left: 19%;
+}
+
+body main section.state-of-art .row,
+body main section.state-of-art .info-container,
+body main section.state-of-art .mobile-phones {
+  height: inherit;
+}
+
+body main section.source-info {
+  padding: 5rem 2rem 8rem 2rem;
+}
+
+body main section.source-info .info-container {
+  margin-top: 11rem;
+  float: right;
+  padding-left: 8rem;
+}
+
+body main section.source-info .desktop img {
+  position: relative;
+  right: 19rem;
+  top: 3rem;
+}
+
+body main section.footer-container {
+  color: white;
+  background-color: #25252d;
+  border-top-right-radius: 6em 6em;
+}
+
+body main section.footer-container .brand-name {
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+body main section.footer-container .site-map table th {
+  padding: 1rem 6rem;
+}
+
+body main section.footer-container .site-map table th:first-child {
+  padding-left: 0;
+}
+
+body main section.footer-container .site-map table td {
+  padding: 0.4rem 6rem;
+}
+
+body main section.footer-container .site-map table td:first-child {
+  padding-left: 0;
+}
+
+body main section.footer-container .site-map table td a {
+  color: white;
+}
+
+body main section.footer-container .site-map table td a:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 /*# sourceMappingURL=styles.css.map */
